# hs-aflstats

./: Build.hs  Makefile  README.md  aflstats.cabal  afltables.cabal  afltables.cfg  stack.yaml  years.cfg
afltables-cli/: BuildNode.hs  Main.hs
pipeline-lib/: AFLTables.hs
pipeline-lib/AFLTables/: PlayerEvent.hs  PlayerEvents.hs  ScoreEvent.hs  ScoreEvents.hs  Types.hs  URL.hs
pipeline-lib/Shake/: BuildNode.hs
src/: AFLTables.hs  Main-orig.hs  Main.hs
src/AFLTables/: MatchStats.hs  PlayerEvent.hs  PlayerEvents.hs  ScoreEvent.hs  ScoreEvents.hs  Types.hs  URL.hs
src/AFLTables/MatchStats/: PlayerEvent.hs  ScoreEvents.hs  Types.hs
