name:                aflstats
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              reckbo
maintainer:          eckbo@cim.mcgill.ca
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:     AFLTables
  build-depends:       base >=4.8, hxt, HandsomeSoup, split >= 0.2.3.1, time >= 1.5.0.1, filepath, cassava, bytestring, hxt-curl, hxt-tagsoup, regex-posix, MissingH, hxt-xpath, vector
  default-language:    Haskell2010

executable afltables
  hs-source-dirs:      src
  main-is:             Main.hs
  -- build-depends:       base >=4.8, shake, filepath, aflstats
  build-depends:       base >=4.8, hxt, HandsomeSoup, split >= 0.2.3.1, time >= 1.5.0.1, filepath, cassava, bytestring, hxt-curl, hxt-tagsoup, regex-posix, shake, MissingH, hxt-xpath, vector, directory
  default-language:    Haskell2010
