name:                afltables
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              reckbo
maintainer:          ryan.eckbo@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:     AFLTables
                     , AFLTables.PlayerEvent
                     , AFLTables.ScoreEvent
                     , AFLTables.Types
                     , AFLTables.URL
  build-depends:       base >=4.7
                     , hxt
                     , hxt-xpath
                     , HandsomeSoup
                     , split >= 0.2.3.1
                     , time >= 1.5.0.1
                     , filepath
                     , cassava
                     , bytestring
                     , regex-posix
                     , MissingH
                     , vector
  default-language:    Haskell2010

executable scrape
  hs-source-dirs:      afltables-cli
  main-is:             Main.hs
  other-modules: BuildNode
  build-depends:       base >=4.7
                     , afltables
                     , hxt-xpath
                     , shake
                     , bytestring
                     , time
                     , directory
                     , cassava
  default-language:    Haskell2010
